added single pages

--- a/allifmaalcommonapp/templates/allifmaalcommonapp/includes/more_details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/includes/more_details.html
@@ -12,7 +12,7 @@
   <!--start of column two-->
     <div class="col-md-4">
     
-      <!--start of the table here-->
+      <!--start of the table here...-->
       <div class="table-responsive">
       <table class="table table-layout">
       <tbody>
