--- a/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sector-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sector-details.html
@@ -106,6 +106,13 @@
       </div>
       </div><!--end of row div --->
         
+      
+
+<hr>
+ 
+{% include 'allifmaalcommonapp/includes/more_details.html' %}
+<hr>
+
           </div>
   
   </div><!--end....table row-->
