added collapsible sections

--- a/allifmaalcommonapp/templates/allifmaalcommonapp/taxes/taxes.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/taxes/taxes.html
@@ -148,8 +148,8 @@
     <tr>
       <form method='POST' action=''>{% csrf_token %}
        
-      <td>{{form.taxname}}</td>
-      <td>{{form.taxdescription}}</td>
+      <td>{{form.name}}</td>
+      <td>{{form.description}}</td>
       <td>{{form.taxrate}}</td>
       <td>{{form.taxtype}}</td>
       
