--- a/allifmaalcommonapp/templates/allifmaalcommonapp/operations/years/add_year.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/operations/years/add_year.html
@@ -77,21 +77,25 @@
        <div class="allif-details-card table-responsive">
        <table class="table table-layout">
         <tbody>
-        
           <tr>
-        <td class="allif-fix-table-col">Year</td>
+        <td class="allif-fix-table-col">Year Name</td>
         <td>{{form.year}}</td>
     
         </tr>
       <tr>
+        <td class="allif-fix-table-col">Year Description</td>
+        <td>{{form.description}}</td>
+    
+        </tr>
+      <tr>
         <td class="allif-fix-table-col">Start Date</td>
-        <td>{{form.start_date}}</td>
+        <td>{{form.starts}}</td>
     
         </tr>
 
          <tr>
         <td class="allif-fix-table-col">End Date</td>
-        <td>{{form.end_date}}</td>
+        <td>{{form.ends}}</td>
     
         </tr>
           </tbody>
@@ -151,9 +155,14 @@
       <div class="table-responsive">
       <table class="table table-layout">
       <tbody>
+        <tr>
+        <td class="allif-fix-table-col">Year Name</td>
+        <td>{{form.year}}</td>
+    
+        </tr>
       <tr>
         <td class="allif-fix-table-col">Year Description</td>
-        <td>{{form.year}}</td>
+        <td>{{form.description}}</td>
     
         </tr>
          <tr>
@@ -176,13 +185,13 @@
         <tbody>
          <tr>
         <td class="allif-fix-table-col">Start Date</td>
-        <td>{{form.start_date}}</td>
+        <td>{{form.starts}}</td>
     
         </tr>
 
          <tr>
         <td class="allif-fix-table-col">End Date</td>
-        <td>{{form.end_date}}</td>
+        <td>{{form.ends}}</td>
     
         </tr>
        
@@ -199,6 +208,7 @@
        <!--start of the table here-->
        <table class="table table-layout">
         <tbody>
+
          
           <tr>
           <td class="allif-fix-table-col">Comments</td>
