--- a/allifmaalcommonapp/templates/allifmaalcommonapp/taxes/add-update-tax.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/taxes/add-update-tax.html
@@ -28,7 +28,7 @@
   </ul>
 </div>
 <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-<a href="{% url 'allifmaalcommonapp:commonAddCompanyScope' user_var glblslug %}">Scopes</a>
+<a href="{% url 'allifmaalcommonapp:commonTaxParameters' user_var glblslug %}">Taxes</a>
 
 </div>
 
