--- a/allifmaalcommonapp/templates/allifmaalcommonapp/taxes/suppliertaxes.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/taxes/suppliertaxes.html
@@ -49,7 +49,7 @@
            
           {% for item in latest %} 
           <tr data-id="{{item.id}}">
-          <td class="allif-fix-table-col"><a class="allif-table-links" href="">{{item.taxname}}</a></td>
+          <td class="allif-fix-table-col"><a class="allif-table-links" href="">{{item.name}}</a></td>
         
          <td> {{item.taxrate}}</td>
         
@@ -87,9 +87,9 @@
         
         {% for item in allifqueryset %} 
         <tr data-id="{{item.id}}">
-        <td class="allif-fix-table-col"><a class="allif-table-links" href="">{{item.taxname}}</a></td>
+        <td class="allif-fix-table-col"><a class="allif-table-links" href="">{{item.name}}</a></td>
        
-       <td> {{item.taxdescription}}</td>
+       <td> {{item.description}}</td>
       
        <td> {{item.taxrate}}</td>
        <td> {{item.taxtype}}</td>
@@ -139,7 +139,7 @@
       <td>Tax Name</td>
       <td>Tax Description</td>
       <td>Tax Rate %</td>
-      <td>Tax Type</td>
+     
       <td>Action</td>
       <td></td>
       </tr>
@@ -148,10 +148,10 @@
     <tr>
       <form method='POST' action=''>{% csrf_token %}
        
-      <td>{{form.taxname}}</td>
-      <td>{{form.taxdescription}}</td>
+      <td>{{form.name}}</td>
+      <td>{{form.description}}</td>
       <td>{{form.taxrate}}</td>
-      <td>{{form.taxtype}}</td>
+      
       
        <td><input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
        <td></td>
