--- a/allifmaalcommonapp/templates/allifmaalcommonapp/operations/years/operation_years.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/operations/years/operation_years.html
@@ -58,10 +58,10 @@
        
         
           <td>
-          {{item.start_date|date:'d/m/Y'}}
+          {{item.starts|date:'d/m/Y'}}
          </td>
          <td>
-          {{item.end_date|date:'d/m/Y'}}
+          {{item.ends|date:'d/m/Y'}}
          </td>
           <td>
           {{item.is_current}}
