added signals, feature to search links, audit logs

--- a/allifmaalcommonapp/templates/allifmaalcommonapp/base/sidetopnavbars/sidetopnavbars.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/base/sidetopnavbars/sidetopnavbars.html
@@ -112,7 +112,11 @@
         <li>
           <a class="nav-link" href="{% url 'allifmaalcommonapp:commonStocks' user_var glblslug %}">Stocks</a>
           <a class="nav-link" href="{% url 'allifmaalcommonapp:commonWebsite' %}">Website</a>
-          
+
+
+          <a class="nav-link" href="" type="button" data-bs-toggle="modal" data-bs-target="#globalSearchModal">Search</a>
+
+      
         </li>
         
       </ul>
