--- a/allifmaalcommonapp/templates/allifmaalcommonapp/includes/forms/base-form.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/includes/forms/base-form.html
@@ -94,6 +94,17 @@
           
               </tr>
          <tr>
+            <td>Operation Year</td>
+            <td>{{form.operation_year}}</td>
+        
+            </tr>
+
+             <tr>
+            <td>Operation Term</td>
+            <td>{{form.operation_term}}</td>
+        
+            </tr>
+             <tr>
             <td>Reference</td>
             <td>{{form.reference}}</td>
         
