--- a/allifmaalcommonapp/templates/allifmaalcommonapp/includes/links/collapse-links.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/includes/links/collapse-links.html
@@ -3,6 +3,14 @@
 
     <a class="dropdown-toggle allif-collapsible-details-section-links" type="button" data-bs-toggle="collapse" 
       data-bs-target="#allif-collapsible-details-section-one" aria-expanded="false"
-       aria-controls="allif-collapsible-details-section-one">Show More Details</a>
+       aria-controls="allif-collapsible-details-section-one">Dynamic Details</a>
+
+        <a class="dropdown-toggle allif-collapsible-details-section-links" type="button" data-bs-toggle="collapse" 
+      data-bs-target="#allif-collapsible-details-section-two" aria-expanded="false"
+       aria-controls="allif-collapsible-details-section-two">Standard Details</a>
+
+    <a class="dropdown-toggle allif-collapsible-details-section-links" type="button" data-bs-toggle="collapse" 
+      data-bs-target="#allif-collapsible-details-section-three" aria-expanded="false"
+       aria-controls="allif-collapsible-details-section-three">Static Details</a>
 
 </div>
