--- a/allifmaalcommonapp/templates/allifmaalcommonapp/scopes/scope_details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/scopes/scope_details.html
@@ -138,7 +138,7 @@
 
 </div><!--end of main container of the page............-->
 
-  <!--START......... Start of collapsible sectioon..........-->
+  <!--START......... Start of collapsible sectioon............-->
   <div class="container-fluid allif-collapsible-details-section-links-wrapper">
 
     <a class="dropdown-toggle allif-collapsible-details-section-links" type="button" data-bs-toggle="collapse" 
