--- a/allifmaalcommonapp/templates/allifmaalcommonapp/suppliers/supplier-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/suppliers/supplier-details.html
@@ -140,6 +140,12 @@
                       <td> {{allifquery.turnover|floatformat:2|intcomma}}</td>
                   
                       </tr>
+
+                      <tr>
+                      <td class="allif-fix-table-col">Reference</td>
+                      <td> {{allifquery.reference}}</td>
+                  
+                      </tr>
                      
           </tbody>
           </table>
