--- a/allifmaaladminapp/templates/allifmaaladminapp/home/home.html
+++ b/allifmaaladminapp/templates/allifmaaladminapp/home/home.html
@@ -27,9 +27,8 @@
       
       <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonCompanies' user_var glblslug %}">Companies</a></li>
        <li><a class="dropdown-item" href="{% url 'allifmaaladminapp:adminappUsers' user_var glblslug %}">Subscribers</a></li>
-      
-      
-    
+       <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:audit_log_list_view' user_var glblslug %}">Audit Logs</a></li>
+     
     </div>
       </ul>
     </div>
