--- a/allifmaalcommonapp/templates/allifmaalcommonapp/base/uimainbase/allifmaaluibase.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/base/uimainbase/allifmaaluibase.html
@@ -7,64 +7,76 @@
 <html>
 <head>
     <link rel="shortcut icon" href='{% static "allifapperp/css/images/Allifmaal-icon.png" %}' type="image/png">
-<title>
-{% block title %}
-<!--the title of each page will be displayed here.....-->
-{% endblock %}
-</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<!--the lib below is very important for the top nav bar opening and closing icon... so keep it there.-->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<link href="{% static 'allifapperp/css/navbars/sidetopnavbars.css' %}" rel="stylesheet">
-<link href="{% static 'allifapperp/css/body/mainbodyui.css' %}" rel="stylesheet">
-<!--any styles loaded from the static files are to be included here...-->
+    <title>
+        {% block title %}
+        <!--the title of each page will be displayed here.....-->
+        {% endblock %}
+    </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--the lib below is very important for the top nav bar opening and closing icon... so keep it there.-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" xintegrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="{% static 'allifapperp/css/navbars/sidetopnavbars.css' %}" rel="stylesheet">
+    <link href="{% static 'allifapperp/css/body/mainbodyui.css' %}" rel="stylesheet">
+    <!-- Bootstrap Icons (for search icon) -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-{% block style %}
+    <!--below is for the dropdown of the select2 lib-->
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
 
-<!--add any custom styling here.......-->
+    {% block style %}
 
-{% endblock %}
+    {% endblock %}
 
 </head>
 <body class="allifmaal-ui-body">
-<!--below includes the side and top nav bars and their styles.....-->
+    
+    <!--below includes the side and top nav bars and their styles.....-->
+    {% include 'allifmaalcommonapp/base/sidetopnavbars/sidetopnavbars.html' %}
 
-{% include 'allifmaalcommonapp/base/sidetopnavbars/sidetopnavbars.html' %}
+    {% block body %}
+    <!--the page content will come here....-->
+    {% endblock %}
+    {% include 'allifmaalcommonapp/base/uimainbase/search/show-searched-links.html' %}
 
-<!--if there is no internet, the app will use the lib in the specified path in the static folder... otherwise it will use the cdn-->
-<!--this libs important for the opening of side menus-->
-<script src="{% static 'allifapperp/js/common/jquery3.6.0.min.js' %}"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    
 
-<!--below is for the dropdown of the select2 lib-->
-<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
-<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- jQuery (Choose ONE and place it BEFORE other scripts that depend on it) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="{% static 'allifapperp/js/common/jquery3.6.0.min.js' %}"></script> 
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> 
 
-{% block body %}
+    <!-- Select2 JS (if used globally) -->
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <!-- Bootstrap JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" xintegrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-<!--the page content will come here....-->
+    {# --- Inject user_var and glblslug as JavaScript variables (NEW) --- #}
+    <script>
+        // These variables are made global and will be available to all subsequent scripts.
+        // Ensure your Django views pass 'user_var' and 'glblslug' to the template context.
+        const GLOBAL_USER_VAR = "{{ user_var }}";
+        const GLOBAL_GLBL_SLUG = "{{ glblslug }}";
+        
+        // For debugging, you can uncomment these:
+        // console.log("GLOBAL_USER_VAR:", GLOBAL_USER_VAR);
+        // console.log("GLOBAL_GLBL_SLUG:", GLOBAL_GLBL_SLUG);
+    </script>
 
+    {# Your common.js inclusion #}
+    {% include 'allifmaalcommonapp/base/commonjs/common.js' %}
+    <script src="{% static 'allifapperp/js/common/common.js' %}"></script>
 
-{% endblock %}
+    {# --- Global Search JavaScript (Simplified) --- #}
+    
+    {% block scripts %}
+    <!-- some js script files here...dont write anything here in this file... -->
+    {% endblock %}
+    <!--Note... when you include a file, it will be available for all the pages in the app unlike the static case...-->
 
-{% block scripts %}
-<!-- some js script files here...dont write anything here in this file... -->
-
-{% endblock %}
-<!--Note... when you include a file, it will be available for all the pages in the app unlike the static case...-->
-
-
-
-{% include 'allifmaalcommonapp/base/commonjs/common.js' %}
-
-<script src="{% static 'allifapperp/js/common/common.js' %}"></script>
-
-
+    {% include 'allifmaalcommonapp/base/commonjs/common.js' %}
+    <script src="{% static 'allifapperp/js/common/common.js' %}"></script>
 
 </body>
 </html>
-  
-
