--- a/allifmaalcommonapp/templates/allifmaalcommonapp/taxes/taxes.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/taxes/taxes.html
@@ -49,7 +49,7 @@
            
           {% for item in latest %} 
           <tr data-id="{{item.id}}">
-          <td class="allif-fix-table-col"><a class="allif-table-links" href="">{{item.taxname}}</a></td>
+          <td class="allif-fix-table-col"><a class="allif-table-links" href="">{{item.name}}</a></td>
         
          <td> {{item.taxrate}}</td>
         
@@ -74,8 +74,7 @@
       
         <td>Tax Description</td>
         <td>Rate %</td>
-        <td>Type</td>
-        
+       
         <td>Navigate</td>
         
         <td> . . . </td>
@@ -92,13 +91,12 @@
        <td> {{item.description}}</td>
       
        <td> {{item.taxrate}}</td>
-       <td> {{item.taxtype}}</td>
       
         <td>
           <div class="dropdown allifmaal-content-dropdown">
             <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
             <div class="dropdown-content">
-              <a href="" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+              <a href="{% url 'allifmaalcommonapp:CommonUpdateTaxDetails' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
               <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item </a>
               
             </div>
